# deepseek-ocr-example

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: installation.md  model-architecture.md  vllm-guide.md
src/deepseek_ocr_example/: __init__.py  cli.py  config.py  grounding_parser.py  logits_processor.py  ocr_processor.py  utils.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_config.py  test_ocr_processor.py  test_utils.py
